--- a/order-management/src/index.css
+++ b/order-management/src/index.css
@@ -1,6 +1,8 @@
 :root {
   --black: #0f0f0f;
   --green: #0ead69;
+  --yellow: #fca311;
+  --red: #e63946;
 }
 
 * {
@@ -47,4 +49,25 @@ code {
 }
 .bg-black {
   background-color: var(--black);
+}
+
+/* Custom Styles */
+
+p[class^="status-"] {
+  display: inline-block;
+  padding: 6px 9px;
+  border-radius: 2px;
+  color: white;
+  width: 100px;
+  text-align: center;
+  font-weight: 700;
+}
+.status-done {
+  background-color: var(--green);
+}
+.status-pending {
+  background-color: var(--yellow);
+}
+.status-cancel {
+  background-color: var(--red);
 }
