--- a/order-management/src/pages/Create-Order/index.scss
+++ b/order-management/src/pages/Create-Order/index.scss
@@ -14,3 +14,15 @@
   font-size: 1.4rem;
   font-weight: 700;
 }
+
+.create-order-wrapper {
+  width: 100%;
+  .ant-space-item {
+    width: 50%;
+  }
+  .ant-list {
+    span {
+      font-size: 1.4rem;
+    }
+  }
+}
